5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1723_2508.log
== TEST (2019-05-14 10:47:36) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)
	i=i+1					
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    i=i+1					
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:59) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)
	i=i+1					
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    i=i+1					
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:00) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)
	i=i+1					
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    i=i+1					
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:44) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)
	i=i+1				
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    i=i+1				
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:53) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)
	i=i+1				
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    i=i+1				
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:07) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
1.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:21) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
1.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:49:28) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- EXECUTION TIME:
0.153074
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
1.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
1.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:29) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
1.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:37) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*3+(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
1.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:55) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
1.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:51:18) 
-- CODE:
n = int(input("escreva: "))
soma=1
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- EXECUTION TIME:
0.196015
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
1.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
1.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:46) 
-- CODE:
n = int(input("escreva: "))
soma=3
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:54:50) 
-- CODE:
n = int(input("escreva: "))
soma=3
i=1
fim=n
while(i<fim):
	soma=soma+(-1)**(i+1)*(4/((i*2)*(i*2+1)*(i*2+2)))
	i=i+1				
print(round(soma, 8))
-- EXECUTION TIME:
0.180156
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
